<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        android:id="@+id/drawerLayout"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">

    <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">

            <LinearLayout
                    android:id="@+id/generalites"
                    style="@style/GreenTile"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:padding="4dp">

                <TextView
                        android:id="@+id/general"
                        style="@style/MediumTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/transparent"
                        android:text="@string/generalitesDocument"/>

                <TextView
                        android:id="@+id/referenceTitre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@color/transparent"
                        android:text="@string/documentReference"/>

                <TextView
                        android:id="@+id/reference"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:background="@color/transparent"
                        android:text="reference"/>

                <TextView
                        android:id="@+id/titreTitre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@color/transparent"
                        android:text="@string/titreDocument"/>

                <TextView
                        android:id="@+id/titre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:background="@color/transparent"
                        android:text="titre"/>

                <TextView
                        android:id="@+id/auteurTitre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@color/transparent"
                        android:text="@string/documentAuthor"/>

                <TextView
                        android:id="@+id/reservedBy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:background="@color/transparent"
                        android:text="auteur"/>

                <TextView
                        android:id="@+id/reserveParTitre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@color/transparent"
                        android:text="@string/reserveParDocument"/>

                <TextView
                        android:id="@+id/reservePar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:background="@color/transparent"
                        android:text="reserve par"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/fichiers"
                    style="@style/RedTile"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:padding="4dp">

                <TextView
                        android:id="@+id/fichiers"
                        style="@style/MediumTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/fichiersDocument"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
                style="@style/YellowTile"
                Textstyle="@style/MediumTitle"
                android:layout_weight="2"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:gravity="center"
                android:text="@string/iterationsDocument"/>

        <TextView
                style="@style/YellowTile"
                Textstyle="@style/MediumTitle"
                android:layout_weight="2"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:gravity="center"
                android:text="@string/attributsDocument"/>

        <TextView
                style="@style/YellowTile"
                Textstyle="@style/MediumTitle"
                android:layout_weight="2"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:gravity="center"
                android:text="@string/liensDocument"/>

    </LinearLayout>

    <LinearLayout
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        <fragment class="docDoku.DocDokuPLM.MenuFragment"
                  android:id="@+id/menu"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"/>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>