<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

        <TextView
                android:id="@+id/workspace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                style="@style/MenuItem"
                android:text="@string/workspace"/>

        <RadioGroup
                android:id="@+id/workspaceRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <!-- Test radiobuttons
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Workspace1"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Workspace2"/> -->

        </RadioGroup>

        <TextView
                android:id="@+id/line"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_marginTop="5dp"
                android:paddingTop="5dip"
                android:gravity="center_horizontal"
                android:layout_below="@+id/connect_help"
                android:layout_width="match_parent"
                android:layout_height="3dp" />

        <TextView
                android:id="@+id/documents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MenuItem"
                android:text="@string/documents"/>

        <LinearLayout
                android:id="@+id/documentSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

            <ImageButton
                    android:id="@+id/documentSearchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:background="@color/transparent"
                    android:src="@android:drawable/ic_menu_search"/>

            <TextView
                    android:id="@+id/rechercherDocuments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    style="@style/MenuItem"
                    android:text="@string/rechercheDocuments"/>
        </LinearLayout>

        <TextView
                android:id="@+id/documentsRecemmentConsultes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/MenuItem"
                android:text="@string/documentsRecemmentConsultes"/>

        <TextView
                android:id="@+id/documentsRecemmentModifies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/MenuItem"
                android:text="@string/documentsRecemmentModifies"/>

        <TextView
                android:id="@+id/documnetsReserves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/MenuItem"
                android:text="@string/documentsReserves"/>

        <TextView
                android:id="@+id/line"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_marginTop="5dp"
                android:paddingTop="5dip"
                android:gravity="center_horizontal"
                android:layout_below="@+id/connect_help"
                android:layout_width="match_parent"
                android:layout_height="3dp" />

        <TextView
                android:id="@+id/articles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MenuItem"
                android:text="@string/articles"/>

        <LinearLayout
                android:id="@+id/articleSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

            <ImageButton
                    android:id="@+id/articleSearchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:background="@color/transparent"
                    android:src="@android:drawable/ic_menu_search"/>

            <TextView
                    android:id="@+id/rechercherArticles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    style="@style/MenuItem"
                    android:text="@string/rechercheArticles"/>
        </LinearLayout>

        <TextView
                android:id="@+id/articlesRecemmentConsultes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/MenuItem"
                android:text="@string/articlesRecemmentConsultes"/>

        <TextView
                android:id="@+id/articlesRecemmentModifies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/MenuItem"
                android:text="@string/articlesRecemmentModifies"/>

    </LinearLayout>

</ScrollView>

