<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        android:id="@+id/drawerLayout"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:paddingRight="20dp"
                android:gravity="center_vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/partKey"/>

                <TextView
                    android:id="@+id/partKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/Theme.AppTheme.MediumTitle"
                    android:text="0001"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/partAuthor"/>

                <TextView
                        android:id="@+id/partAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        style="@style/Theme.AppTheme.MediumTitle"
                        android:text="Mr M."/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="2">

                <ImageView
                    android:id="@+id/checkOutLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/checked_in_light"/>

                <TextView
                    android:id="@+id/checkOutUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mr. M"/>

                <Button
                    android:id="@+id/checkInOutButton"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/partCheckOut"/>

            </LinearLayout>

        </LinearLayout>

        <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <android.support.v4.view.PagerTabStrip
                    android:id="@+id/pager_title_strip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:background="#33b5e5"
                    android:textColor="#fff"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp" />

        </android.support.v4.view.ViewPager>

    </LinearLayout>

    <LinearLayout
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        <fragment class="com.docdoku.android.plm.client.MenuFragment"
                  android:id="@+id/menu"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"/>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>